# tensorflow-on-stm32f4

./: .gitignore
pymodel/: and_gate_model.h5  and_gate_model.py  and_gate_model.tflite
stm32project/: CMakeLists.txt  Makefile  README.md  linker_script.ld  main.c  startup.c
stm32project/Drivers/Linker_script/: linker_script.ld
stm32project/Inc/: main.h  stm32f4xx_it.h  usart.h
stm32project/Model/: model_data.h
stm32project/Src/: main.c  stm32f4xx_it.c  usart.c
stm32project/Startup/: startup.c
